Thumbnails alignment fixed..

--- a/frontend/src/components/Thumbnails/thumbnails.module.css
+++ b/frontend/src/components/Thumbnails/thumbnails.module.css
@@ -43,7 +43,7 @@
 }
 
 .stars {
-    margin: 0rem 0.5rem;
+    margin: 0.25rem 0;
   }
   
   .product_item_footer {
